# remindarr

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_llm_gateway.py  test_nl_parser.py  test_time_utils.py
.github/workflows/: build-and-push.yml
app/api/: settings_routes.py  state.py  telegram_webhook.py
app/common/: constants.py  schemas.py
app/db/: config_db.py  models.py
app/services/: llm_gateway.py  nl_parser.py  notification_worker.py  notion.py  notion_sync.py  reminder_service.py  telegram.py
app/utils/: scheduling.py  time_utils.py
k8s/base/: argocd-app.yaml  deployment.yaml  externalsecret.yaml  service.yaml
k8s/overlays/prod/: kustomization.yaml
