[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv~=0.9.9",
    "fastapi~=0.118.0",
    "httpx~=0.28.1",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic~=2.11.9",
    "pydantic-settings~=2.11.0",
    "python-dotenv~=1.1.1",
    "requests~=2.33.0",
    "sqlalchemy~=2.0.43",
    "sqlmodel~=0.0.25",
    "uvicorn>=0.35.0",
]
