[project]
name = "remindarr"
version = "0.2.0"
description = "Telegram reminder bot with natural-language scheduling and Notion sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.118.0",
    "uvicorn>=0.35.0",
    "httpx~=0.28.1",
    "pydantic~=2.11.9",
    "pydantic-settings~=2.11.0",
    "python-dotenv~=1.1.1",
    "sqlalchemy~=2.0.43",
    "sqlmodel~=0.0.25",
    "psycopg2-binary>=2.9.11",
    "python-dateutil~=2.9.0",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
